[package]
name = "ddh-move-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3"
rayon = "1.4"
serde = "1.0"
serde_derive = "1.0.80"
serde_json = "1.0.80"

[profile.release]
lto = true
debug=false
opt-level = 3
